--- a/src/LanguageSpecs.Web/Views/_ViewImports.cshtml
+++ b/src/LanguageSpecs.Web/Views/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, LanguageSpecs.Web
+
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
