Fixed <hr> placement.

--- a/src/LanguageSpecs.Web/Views/Shared/_GoogleAdsensePartial.cshtml
+++ b/src/LanguageSpecs.Web/Views/Shared/_GoogleAdsensePartial.cshtml
@@ -1,5 +1,5 @@
-﻿<hr />
-<div class="advertising">
+﻿<div class="advertising">
+    <hr />
     <div class="container-fluid">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
