CSS cleanup and updated color scheme.

--- a/src/LanguageSpecs.Web/wwwroot/css/theme.scss
+++ b/src/LanguageSpecs.Web/wwwroot/css/theme.scss
@@ -3,8 +3,7 @@
     padding-top: 5px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    border-top-style: solid;
-    border-top-width: 5px;
+    border-top: solid 5px;
 }
 
 h1, h2, h3, h4, h5, h6 {
