--- a/src/LanguageSpecs.Web/wwwroot/css/theme-color.css
+++ b/src/LanguageSpecs.Web/wwwroot/css/theme-color.css
@@ -1,27 +1,27 @@
 ﻿body {
-  color: #123851;
-  border-color: #2980b9; }
+  color: #031016;
+  border-color: #145d85; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #123851; }
+  color: #031016; }
 
 hr, .hr {
-  border-color: #7fbbe3; }
+  border-color: #1e8cc8; }
 
 a {
-  color: #2472a4; }
+  color: #114e6f; }
   a:hover {
-    color: #164666; }
+    color: #071f2c; }
     a:hover img {
       opacity: .75; }
 
 .marketing-text {
-  border-color: #7fbbe3; }
+  border-color: #1e8cc8; }
 
 .specs .spec-block .spec-block-header {
-  border-color: #d2e7f5; }
+  border-color: #d3ebf8; }
 
 @media (max-width: 992px) {
   footer .contact {
-    border-top-color: #bedcf0; } }
+    border-top-color: #bde1f5; } }
 
