--- a/src/LanguageSpecs.Web/wwwroot/css/theme-color.scss
+++ b/src/LanguageSpecs.Web/wwwroot/css/theme-color.scss
@@ -1,15 +1,33 @@
-﻿$dark: #b5b2b2;
-$light: #dad9d9;
-$base-color: #2980b9;
+﻿// Start with assigning color names to specific hex values.
+$white: #fff !default;
+$black: #000 !default;
+$red: #d9534f !default;
+$orange: #f0ad4e !default;
+$yellow: #ffd500 !default;
+$green: #5cb85c !default;
+$blue: #0275d8 !default;
+$teal: #5bc0de !default;
+$pink: #ff5b77 !default;
+$purple: #613d7c !default;
 
-$border-color: $base-color;
+// Create grayscale
+$gray-dark: #292b2c !default;
+$gray-medium: #b5b2b2 !default;
+$gray: #464a4c !default;
+$gray-light: #636c72 !default;
+$gray-lighter: #eceeef !default;
+$gray-lightest: #f7f7f9 !default;
+
+// Theme colors
+$base-color: #145D85;//004F99;//02779E; //2980b9;
+
+$border-color: lighten($base-color, 15%);
 $link-color: darken($base-color, 5%);
 $text-color: darken($base-color, 25%);
 
  body {
-    //background: lighten($light, 8%);
     color: $text-color;
-    border-color: $border-color;
+    border-color: darken($border-color, 15%);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 hr, .hr {
-    border-color: lighten($border-color, 25%);
+    border-color: $border-color;
 }
 
 a {
@@ -31,8 +49,9 @@ a {
         }
     }
 }
+
 .marketing-text {
-    border-color: lighten($border-color, 25%);
+    border-color: $border-color;
 }
 
 .specs {
