Added Google and Bing site verification.

--- a/src/LanguageSpecs.Web/Views/Shared/_HeadMeta.cshtml
+++ b/src/LanguageSpecs.Web/Views/Shared/_HeadMeta.cshtml
@@ -23,4 +23,6 @@
 <meta name="twitter:url" content="@url" />
 <meta name="twiter:title" content="@title" />
 <meta name="twiter:description" content="@description" />
-@*<meta name="msvalidate.01" content="767B8478A8D8CF83DF28EFE976F167E2" />*@
+
+<meta name="google-site-verification" content="H8_xXBtP-gA95yOFP8tfi67XW74QUjMGP_Jr8diL6ak" />
+<meta name="msvalidate.01" content="767B8478A8D8CF83DF28EFE976F167E2" />
