--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,19 @@
 <hr />
-<footer class="container-fluid text-center text-muted small pb-1 mt-3">
+<footer class="container-fluid text-muted small pb-1 mt-3">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-8">
                 <p>
-                    This site simply maintains a link to the official location for the language spec.
-                    That let's us focus on creating this site and maintaining the links while the language
-                    authors keep responsibility for their respective languages.
-                </p>
-            </div>
-            <div class="col-md-4">
-                <p>
-                    If you see something wrong with the site, need to correct the information about a spec, or want to add a
+                    This site simply maintains a link to the official location for the language spec so
+                    the language authors keep responsibility for their respective languages.
+                    If you see something wrong with the site, need to correct the link or logo for a spec, or want to add a
                     spec that's missing, head on over to <a href="https://github.com/scottdorman/languagespecs.info">GitHub</a> and submit a pull request.
                 </p>
             </div>
             <div class="col-md-4">
-            <ul class="list-inline social-links">
+            <ul class="list-inline social-links text-right">
                 <li class="list-inline-item"><a data-toggle="tooltip" title="GitHub" href="https://github.com/scottdorman/languagespecs.info"><i class="fab fa-github-square"></i></a></li>
                 <li class="list-inline-item"><a data-toggle="tooltip" title="Twitter" href="http://twitter.com/sdorman"><i class="fab fa-twitter"></i></a></li>
-                <li class="list-inline-item"><a data-toggle="tooltip" title="Blog" href="https://scottdorman.github.io/"><i class="fa fa-rss-square"></i></a></li>
+                <li class="list-inline-item"><a data-toggle="tooltip" title="Blog" href="https://scottdorman.blog/"><i class="fa fa-rss-square"></i></a></li>
             </ul>
             </div>
         </div>
